--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   ml_linalg: ^12.3.0
   flutter_sparkline: ^0.1.0
   multi_charts: ^0.1.1
+  flutter_candlesticks: ^0.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
